# template

./: .gitignore  Dockerfile  pyproject.toml
src/: app.py
src/middlewares/: __init__.py
