[tool.poetry]
name = "simple-bot"
version = "0.1.0"
description = ""
authors = []
license = ""

[tool.poetry.dependencies]
python = "^3.10"
wonda = "^0.7.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
